--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     "docs": "https://studioespresso.co"
   },
   "require": {
-    "craftcms/cms": "~3.0.0-beta.1"
+    "craftcms/cms": "dev-release/3.0.0-RC1"
   },
   "autoload": {
     "psr-4": {
