--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
   "name": "studioespresso/easyaddressfield",
   "description": "The only address field you need",
-  "version": "1.0.0",
   "type": "craft-plugin",
   "keywords": [
     "cms",
@@ -23,7 +22,7 @@
     "docs": "https://studioespresso.co"
   },
   "require": {
-    "craftcms/cms": "3.0.0-RC1",
+    "craftcms/cms": "^3.0.0-RC1",
     "league/iso3166": "^2.0"
   },
   "autoload": {
