--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "name": "studioespresso/easyaddressfield",
   "description": "The only address field you need",
   "type": "craft-plugin",
+  "version": "1.0.0",
   "keywords": [
     "cms",
     "craftcms",
