--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "studioespresso/craft-easyaddressfield",
   "description": "The only address field you need",
   "type": "craft-plugin",
-  "version": "2.2.0",
+  "version": "2.2.1",
   "keywords": [
     "cms",
     "craftcms",
@@ -34,6 +34,7 @@
   "extra": {
     "name": "Easy Address Field",
     "handle": "easy-address-field",
+    "changelogUrl": "https://github.com/studioespresso/craft3-easyaddressfield/blob/develop/CHANGELOG.MD",
     "class": "studioespresso\\easyaddressfield\\EasyAddressField"
   }
 }
