Updated author url

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
   "authors": [
     {
       "name": "Studio Espresso",
-      "homepage": "https://studioespresso.co"
+      "homepage": "https://studioespresso.dev"
     }
   ],
   "support": {
