--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "studioespresso/craft-easyaddressfield",
   "description": "The only address field you need",
   "type": "craft-plugin",
-  "version": "4.0.7",
+  "version": "5.0.0-alpha.1",
   "keywords": [
     "cms",
     "craftcms",
@@ -22,7 +22,7 @@
     "docs": "https://github.com/studioespresso/craft3-easyaddressfield/blob/master/README.MD"
   },
   "require": {
-    "craftcms/cms": "^4.0.0-beta.1",
+    "craftcms/cms": "^5.0.x-dev as 5.0.0-alpha",
     "league/iso3166": "^3.0",
     "giggsey/locale": "^2.0.0",
     "maxh/php-nominatim": "^2.0"
