--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "studioespresso/craft-easyaddressfield",
   "description": "The only address field you need",
   "type": "craft-plugin",
-  "version": "5.0.0-alpha.1",
+  "version": "5.0.0",
   "keywords": [
     "cms",
     "craftcms",
